chore: add update recipe route docs
